--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+
     <string name="app_name">"Memory"</string>
     <string name="activity_title">"Memory Game For Kids"</string>
     <string name="success_title">"Bravo !"</string>
@@ -16,20 +17,16 @@
     <string name="first_run_dialog_message">Merci d\'avoir téléchargé Memory Game For Kids\n\n
     Instructions rapides:\n
     \t• Cliquer sur les cartes pour découvrir les paires.\n
-    \n\n Amusez-vous bien!\n
-    </string>
+    \n\n Amusez-vous bien!\n</string>
     <string name="whats_new_dialog_title">Nouveautés dans Memory Game For Kids</string>
-    <string name="whats_new_dialog_message">Merci d\'avoir téléchargé cette nouvelle version\n
-    <b>Nouveau dans la version 2.0:</b>\n
+    <string name="whats_new_dialog_message">Merci d\'avoir téléchargé cette nouvelle version\n <b>Nouveau dans la version 2.0:</b>\n
     \t• Nouvelle sélection des thèmes (Noël, Pâques,... ) dans les préférences.\n
     \t• Nouveau Thème : Tux.\n
     \t• Toujours aucune publicité, ni accès internet requis.\n
-    \n\n N\'oubliez pas de noter l\'application.
-    </string>
+    \n\n N\'oubliez pas de noter l\'application.</string>
     <string name="credits_menu">A propos</string>
     <string name="credits_app_name">Memory Game For Kids</string>
     <string name="credits_current_version">Version 2.0.1</string>
-    
     <string name="menu_preferences">Préférences</string>
     <string name="title_hiscore">High Score</string>
     <string name="label_hiscore">High Score actuel : </string>
@@ -38,13 +35,17 @@
     <string name="message_effect_new_game">Cette option prendra effet après avoir lancé un nouveau jeu</string>
     <string name="title_sound">Son</string>
     <string name="checkbox_sound">Activer le son</string>
-    
     <string name="prompt_themes">Sélectionnez votre thème</string>
+
     <string-array name="array_themes">
-        <item>Défaut</item> 
-        <item>Saison - Noël</item> 
-        <item>Saison - Pâques</item> 
-        <item>Fun - Tux</item> 
+        <item>Saison - Noël</item>
+        <item>Saison - Pâques</item>
+    </string-array>
+    <string-array name="array_themes_premium">
+        <item>Saison - Noël</item>
+        <item>Saison - Pâques</item>
+        <item>Classic</item>
+        <item>Fun - Tux</item>
     </string-array>
 
     <string name="title_support">Support</string>
